@@ -1,10 +1,10 @@
 # Created by Jevoom
 #
 # 23-Jun-2011
-#   Update to check that defaults meet specified rules properly, and handle strings and symbols when generating files
+#   Minor tweak to get string handling working properly for generating configs
 
 module Jeckyl
-  Version = '0.1.2'
+  Version = '0.1.3'
   Version_Date = '23-Jun-2011'
-  Ident = 'jeckyl-0.1.2 23-Jun-2011'
+  Ident = 'jeckyl-0.1.3 23-Jun-2011'
 end
